--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1>Illusion Forest</h1>
   </div>
 
-
+  <audio src="sound/5693765046501376.wav"></audio>
 
 <script src="script/app.js"></script>
 
