--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div id=startScreen>
     <br>
-  <h1>Illusion Forest</h1>
+  <h1 id=title>Illusion Forest</h1>
   </div>
 
   <audio src="sound/5693765046501376.wav" autoplay loop></audio>
