--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <title>Illusion Forest</title>
 
-<link rel="icon" href="favicon.png">
+<link rel="icon" href="/IllusionForest.github.io/favicon.png">
 <link rel="stylesheet" type="text/css" href="style/main.css">
 
 </head>
@@ -17,7 +17,7 @@
   <h1 id=title>Illusion Forest</h1>
   </div>
 
-  <audio src="sound/5693765046501376.wav" autoplay=""></audio>
+  <audio src="sound/5693765046501376.wav" loop autoplay></audio>
 
 <script src="script/app.js"></script>
 
