--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <title>Illusion Forest</title>
 
-<link rel="icon" href="/IllusionForest.github.io/favicon.png">
+<link rel="icon" href="image/favicon.png">
 <link rel="stylesheet" type="text/css" href="style/main.css">
 
 </head>
