--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
   <div id=startScreen>
     <br>
   <h1 id=title>Illusion Forest</h1>
+    <br>
+    <br>
+  <a><img src="image/start.png" width=300 height=300><a>
   </div>
 
-  <audio src="sound/5693765046501376.wav" loop autoplay></audio>
+<audio src="sound/5693765046501376.wav" autoplay="true" loop="true"></audio>
 
 <script src="script/app.js"></script>
 
