--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1 id=title>Illusion Forest</h1>
     <br>
     <br>
-  <a><img src="image/start.png" width=300 height=300></a>
+  <a><img src="image/start.png" width=300 height=300 id=startButton></a>
   </div>
 
 <audio src="sound/5693765046501376.wav" autoplay="true" loop="true"></audio>
