--- a/index.html
+++ b/index.html
@@ -19,8 +19,35 @@
     <br>
   <a><img src="image/start.png" width=300 height=300 id=startButton></a>
   </div>
+  
+  <p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> 
+  </p>
+  
+  <div id=intro>
+    <canvas id=intro class=canvases></canvas>
+  </div>
 
-<audio src="sound/5693765046501376.wav" autoplay="true" loop="true"></audio>
+  
+<audio src="sound/5693765046501376.wav"></audio>
+  
 
 <script src="script/app.js"></script>
 
