--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </p>
   
   <div id=intro>
-    <canvas id=intro class=canvases></canvas>
+    <canvas width=1300 height=700 id=intro class=canvases></canvas>
   </div>
 
   
