--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1 id=title>Illusion Forest</h1>
     <br>
     <br>
-  <a><img src="image/start.png" width=300 height=300 id=startButton></a>
+  <a><img src="image/start.png" id=startButton></a>
   </div>
   
   <p>
@@ -60,7 +60,7 @@
   </p>
   
   <div>
-    <canvas width=1300 height=700 id=intro class=canvases></canvas>
+    <canvas id=intro class=canvases></canvas>
   </div>
 
   
