--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
   </div>
   
 
-  
+  <div id=invisibleStuff>
 <audio src="sound/5693765046501376.wav"></audio>
-  
+    
+  <img id=forest src="forest.png" width=0 height=0>
+  </div>
 
 <script src="script/app.js"></script>
 
