--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h1 id=title>Illusion Forest</h1>
     <br>
     <br>
-  <a><img src="image/start.png" id=startButton></a>
+  <a href="#intro"><img src="image/start.png" id=startButton></a>
   </div>
   
   
