--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
 
 <audio src="sound/5693765046501376.wav"></audio>
-  <img id=forest src="forest.png" width=0 height=0>
+  <img id=forest src="image/forest.png" width=0 height=0>
 
 
 <script src="script/app.js"></script>
