--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="style/main.css">
 
 </head>
-<body>
+<body onkeydown="caracterMove(event)" onkeyup="caracterStop()">
 
   
   
