--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 
 <audio src="sound/5693765046501376.wav"></audio>
   <img id=forest src="image/forest.png" width=0 height=0>
+  
+  <img id=bobRight1 src="image/bob1.png" width=0 height=0>
+  <img id=bobRight2 src="image/bob2.png" width=0 height=0>
+  <img id=bobLeft1 src="image/bob3.png" width=0 height=0>
+  <img id=bobLeft2 src="image/bob4.png" width=0 height=0>
+  
+  
 
 
 <script src="script/app.js"></script>
