--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   <img id=bobLeft1 src="image/bob3.png" width=0 height=0>
   <img id=bobLeft2 src="image/bob4.png" width=0 height=0>
   
+  <img id=heart src="image/life.png" width=0 height=0>
+  
   
 
 
