--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <img id=bobLeft2 src="image/bob4.png" width=0 height=0>
   
   <img id=heart src="image/life.png" width=0 height=0>
+  <img id=reviveButton src="image/revive.png" width=0 height=0>
   
   
 
