--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
   <h1 id=title>Illusion Forest</h1>
     <br>
     <br>
-  <a href="#intro"><img src="image/start.png" id=startButton></a>
+  <a href="#part1"><img src="image/start.png" id=startButton></a>
   </div>
   
   
   
   <div>
-    <canvas id=part1 class=canvases></canvas>
+    <a id=next>
+    <canvas id=part1 class=canvases onclick="reset()"></canvas>
+    </a>
   </div>
   
 
