--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   
   <img id=heart src="image/life.png" width=0 height=0>
   <img id=reviveButton src="image/revive.png" width=0 height=0>
-  <img id=trunk src="image/stump.png" width=0 height=0>
+  <img id=trunk src="image/trunk.png" width=0 height=0>
 
 
 <script src="script/app.js"></script>
