--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
   
   <img id=heart src="image/life.png" width=0 height=0>
   <img id=reviveButton src="image/revive.png" width=0 height=0>
+  
   <img id=rock src="image/rock.png" width=0 height=0>
+  <im id=spikeFloor src="image/spikeFloor" width=0 height=0>
 
 
 <script src="script/app.js"></script>
