--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <img id=reviveButton src="image/revive.png" width=0 height=0>
   
   <img id=rock src="image/rock.png" width=0 height=0>
-  <im id=spikeFloor src="image/spikeFloor.png" width=0 height=0>
+  <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0>
 
 
 <script src="script/app.js"></script>
