--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 <audio src="sound/5693765046501376.wav"></audio>
   <img id=introback src="image/intro.png" width=0 height=0>
+  <img id=lvl1back src="image/lvl_1.png" width=0 height=0>
+  <img id=house src="image/house.png" width=0 height=0>
   
   <img id=bobRight1 src="image/bob1.png" width=0 height=0>
   <img id=bobRight2 src="image/bob2.png" width=0 height=0>
@@ -42,6 +44,7 @@
   <img id=heart src="image/life.png" width=0 height=0>
   <img id=reviveButton src="image/revive.png" width=0 height=0>
   
+  <img id=door src="image/door.png" width=0 height=0>
   <img id=rock src="image/rock.png" width=0 height=0>
   <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0>
 
