--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 
 <meta charset="utf-8">
+<meta name="description" content="Get lost helping a gnome get to the elf village and back in this fun enchanted forest theme html/javascript platformer.">
+  
 <title>Illusion Forest</title>
 
 <link rel="icon" href="image/favicon.png">
