--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 
-<meta charset="utf-8">
-<meta name="description" content="Get lost helping a gnome get to the elf village and back in this fun enchanted forest theme html/javascript platformer game.">
+<meta charset="utf-8"> 
+<meta name="description" content="Get lost helping a gnome get to the elf village and back in this fun enchanted forest theme html/javascript platformer game. Have fun!">
 <meta name="google-site-verification" content="dw1tzdBNSi6Ppgojtg-tYByLNdJJFdChVw5SLjvGBUI" />
   
 <title>Illusion Forest</title>
