--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 <meta charset="utf-8"> 
-<meta name="description" content="Get lost helping a gnome get to the elf village and back in this fun enchanted forest theme html/javascript platformer game. Have fun!">
+<meta name="description" content="Get lost helping a gnome get to the elf village and back in this fun enchanted forest theme html/javascript platforming game. Have fun!">
 <meta name="google-site-verification" content="dw1tzdBNSi6Ppgojtg-tYByLNdJJFdChVw5SLjvGBUI" />
   
 <title>Illusion Forest</title>
@@ -36,21 +36,21 @@
   <audio id=sound_intro src="sound/5693765046501376.wav" autoplay="true" loop="true"></audio>
   <audio id=sound_1 src="sound/5395415772430336.wav" autoplay="true" loop="true"></audio>
   
-  <img id=introback src="image/intro.png" width=0 height=0>
-  <img id=lvl1back src="image/lvl_1.png" width=0 height=0>
-  <img id=house src="image/house.png" width=0 height=0>
+  <img id=introback src="image/intro.png" width=0 height=0 alt="forest">
+  <img id=lvl1back src="image/lvl_1.png" width=0 height=0 alt="forest">
+  <img id=house src="image/house.png" width=0 height=0 alt="gnome house">
   
-  <img id=bobRight1 src="image/bob1.png" width=0 height=0>
-  <img id=bobRight2 src="image/bob2.png" width=0 height=0>
-  <img id=bobLeft1 src="image/bob3.png" width=0 height=0>
-  <img id=bobLeft2 src="image/bob4.png" width=0 height=0>
+  <img id=bobRight1 src="image/bob1.png" width=0 height=0 alt="gnome">
+  <img id=bobRight2 src="image/bob2.png" width=0 height=0 alt="gnome">
+  <img id=bobLeft1 src="image/bob3.png" width=0 height=0 alt="gnome">
+  <img id=bobLeft2 src="image/bob4.png" width=0 height=0 alt="gnome">
   
-  <img id=heart src="image/life.png" width=0 height=0>
-  <img id=reviveButton src="image/revive.png" width=0 height=0>
+  <img id=heart src="image/life.png" width=0 height=0 alt="heart">
+  <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
   
-  <img id=door src="image/door.png" width=0 height=0>
-  <img id=rock src="image/rock.png" width=0 height=0>
-  <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0>
+  <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
+  <img id=rock src="image/rock.png" width=0 height=0 alt="rock">
+  <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0 alt="spike">
 
 
 <script src="script/app.js"></script>
