--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 
 <meta charset="utf-8"> 
-<meta name="description" content="Get lost helping a gnome get to the elf village and back in this fun enchanted forest theme html/javascript platforming game. Hosted with GitHub. Have fun">
+<meta name="description" content="Help a gnome jump, hop and run to overcome obstacles on its road to the elf village Elhendyre and back in this fun enchanted forest theme platforming game.">
 <meta name="google-site-verification" content="dw1tzdBNSi6Ppgojtg-tYByLNdJJFdChVw5SLjvGBUI" />
   
-<title>Illusion Forest</title>
+<title>Road to Elhendyre</title>
 
 <link rel="icon" href="image/favicon.png">
 <link rel="stylesheet" type="text/css" href="style/main.css">
