--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 <meta charset="utf-8"> 
-<meta name="description" content="Help a gnome run, hop and jump to overcome obstacles on its road to the elf village Elhendyre and back in this fun enchanted forest theme platforming game.">
+<meta name="description" content="Help a gnome run and hop over and under obstacles on its road to the elf village Elhendyre and back in this fun enchanted forest theme platforming game.">
 <meta name="google-site-verification" content="dw1tzdBNSi6Ppgojtg-tYByLNdJJFdChVw5SLjvGBUI" />
   
 <title>Road to Elhendyre</title>
