--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="Help a gnome run and hop over and under obstacles on its road to the elf village Elhendyre and back in this forest platformer. But watch out the elves dont like visitors and have placed magic all around the forest surounding Elhendyre. Good luck and have fun!">
 <meta name="google-site-verification" content="dw1tzdBNSi6Ppgojtg-tYByLNdJJFdChVw5SLjvGBUI" />
   
-<title>Road to Elhendyre</title>
+<title>Illusion Forest</title>
 
 <link rel="icon" href="image/favicon.png">
 <link rel="stylesheet" type="text/css" href="style/main.css">
@@ -33,8 +33,8 @@
     </a>
   </div>
   
-  <audio id=sound_intro src="sound/5693765046501376.wav" autoplay="true" loop="true"></audio>
-  <audio id=sound_1 src="sound/5395415772430336.wav" autoplay="true" loop="true"></audio>
+  <audio id=sound_intro src="sound/5693765046501376.wav"></audio>
+  <audio id=sound_1 src="sound/5395415772430336.wav"></audio>
   
   <img id=introback src="image/intro.png" width=0 height=0 alt="forest">
   <img id=lvl1back src="image/lvl_1.png" width=0 height=0 alt="forest">
