--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </a>
   </div>
   
-  <audio id=sound_intro src="sound/5693765046501376.wav"></audio>
-  <audio id=sound_1 src="sound/5395415772430336.wav"></audio>
+  <audio id=sound_intro src="sound/5693765046501376.wav" loop></audio>
+  <audio id=sound_1 src="sound/5395415772430336.wav" loop></audio>
   
   <img id=introback src="image/intro.png" width=0 height=0 alt="forest">
   <img id=lvl1back src="image/lvl_1.png" width=0 height=0 alt="forest">
