--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
   <img id=bobLeft1 src="image/bob3.png" width=0 height=0 alt="gnome">
   <img id=bobLeft2 src="image/bob4.png" width=0 height=0 alt="gnome">
   
+  <img id=meter1 src"image/meter1" width=0 height=0 alt="lenghtMeter">
+  <img id=meter2 src"image/meter2" width=0 height=0 alt="lenghtMeter">
+  <img id=meter3 src"image/meter3" width=0 height=0 alt="lenghtMeter">
+  <img id=meter4 src"image/meter4" width=0 height=0 alt="lenghtMeter">
+  <img id=meter5 src"image/meter5" width=0 height=0 alt="lenghtMeter">
+  <img id=meter6 src"image/meter6" width=0 height=0 alt="lenghtMeter">
+  <img id=meter7 src"image/meter7" width=0 height=0 alt="lenghtMeter">
+  
   <img id=heart src="image/life.png" width=0 height=0 alt="heart">
   <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
   
