--- a/index.html
+++ b/index.html
@@ -38,20 +38,21 @@
   
   <img id=introback src="image/intro.png" width=0 height=0 alt="forest">
   <img id=lvl1back src="image/lvl_1.png" width=0 height=0 alt="forest">
-  <img id=house src="image/house.png" width=0 height=0 alt="gnome house">
+  <img id=house src="image/house.png" width=0 height=0 alt="house">
+  <img id=lvl2back src="image/lvl_2.png" width=0 height=0 alt="forest">
   
   <img id=bobRight1 src="image/bob1.png" width=0 height=0 alt="gnome">
   <img id=bobRight2 src="image/bob2.png" width=0 height=0 alt="gnome">
   <img id=bobLeft1 src="image/bob3.png" width=0 height=0 alt="gnome">
   <img id=bobLeft2 src="image/bob4.png" width=0 height=0 alt="gnome">
   
-  <img id=meter1 src="image/meter1.png" width=0 height=0 alt="lenghtMeter">
-  <img id=meter2 src="image/meter2.png" width=0 height=0 alt="lenghtMeter">
-  <img id=meter3 src="image/meter3.png" width=0 height=0 alt="lenghtMeter">
-  <img id=meter4 src="image/meter4.png" width=0 height=0 alt="lenghtMeter">
-  <img id=meter5 src="image/meter5.png" width=0 height=0 alt="lenghtMeter">
-  <img id=meter6 src="image/meter6.png" width=0 height=0 alt="lenghtMeter">
-  <img id=meter7 src="image/meter7.png" width=0 height=0 alt="lenghtMeter">
+  <img id=meter1 src="image/meter1.png" width=0 height=0 alt="illusion">
+  <img id=meter2 src="image/meter2.png" width=0 height=0 alt="illusion">
+  <img id=meter3 src="image/meter3.png" width=0 height=0 alt="illusion">
+  <img id=meter4 src="image/meter4.png" width=0 height=0 alt="illsuion">
+  <img id=meter5 src="image/meter5.png" width=0 height=0 alt="illusion">
+  <img id=meter6 src="image/meter6.png" width=0 height=0 alt="illusion">
+  <img id=meter7 src="image/meter7.png" width=0 height=0 alt="illusion">
   
   <img id=heart src="image/life.png" width=0 height=0 alt="heart">
   <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
