--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
   <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
   
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
+  
   <img id=rock src="image/rock.png" width=0 height=0 alt="rock">
+  
   <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0 alt="spike">
+  <img id=spikeWall src="image/spikeWall.png" width=0 height=0 alt="spike">
 
 
 <script src="script/app.js"></script>
