--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   
   <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0 alt="spike">
   <img id=spikeWall src="image/spikeWall.png" width=0 height=0 alt="spike">
+  <img id=spikeBall src="image/spikeBall.png" width=0 height=0 alt="spike">
 
 
 <script src="script/app.js"></script>
