--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <h1 id=title>Illusion Forest</h1>
     <br>
     <br>
-  <a href="#part1"><img src="image/start.png" id=startButton></a>
+  <a href="#mycanvas"><img src="image/start.png" id=startButton></a>
   </div>
   
   
   
   <div>
     <a id=next>
-    <canvas id=part1 class=canvases onclick="reset()"></canvas>
+    <canvas id=mycanvas class=canvases onclick="reset()"></canvas>
     </a>
   </div>
   
