--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <img id=lvl1back src="image/lvl_1.png" width=0 height=0 alt="forest">
   <img id=lvl2back src="image/lvl_2.png" width=0 height=0 alt="forest">
   <img id=lvl3back src="image/lvl_3.png" width=0 height=0 alt="forest">
+  <img id=lvl4back src="image/lvl_4.png" width=0 height=0 alt="forest">
   
   <img id=house src="image/house.png" width=0 height=0 alt="house">
   
