--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <audio id=sound_intro src="sound/5693765046501376.wav" loop></audio>
   <audio id=sound_1 src="sound/5395415772430336.wav" loop></audio>
   <audio id=sound_2 src="sound/5829014900441088.wav" loop></audio>
+  <audio id=sound_3 src="sound/5097789470539776.wav" loop></audio>
   
   <img id=introback src="image/intro.png" width=0 height=0 alt="forest">
   <img id=lvl1back src="image/lvl_1.png" width=0 height=0 alt="forest">
