--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
   
   <img id=rock src="image/rock.png" width=0 height=0 alt="rock">
+  <img id=vine src="image/vine.png" width=0 height=0 alt="vine">
   
   <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0 alt="spike">
   <img id=spikeWall src="image/spikeWall.png" width=0 height=0 alt="spike">
