--- a/index.html
+++ b/index.html
@@ -51,15 +51,21 @@
   <img id=bobLeft1 src="image/bob3.png" width=0 height=0 alt="gnome">
   <img id=bobLeft2 src="image/bob4.png" width=0 height=0 alt="gnome">
   
-  <img id=meter1 src="image/meter1.png" width=0 height=0 alt="enchanted">
+  <img id=meter1 src="image/meter1.png" width=0 height=0 alt="illusion">
   <img id=meter2 src="image/meter2.png" width=0 height=0 alt="illusion">
-  <img id=meter3 src="image/meter3.png" width=0 height=0 alt="enchanted">
+  <img id=meter3 src="image/meter3.png" width=0 height=0 alt="illusion">
   <img id=meter4 src="image/meter4.png" width=0 height=0 alt="illusion">
-  <img id=meter5 src="image/meter5.png" width=0 height=0 alt="enchanted">
+  <img id=meter5 src="image/meter5.png" width=0 height=0 alt="illusion">
   <img id=meter6 src="image/meter6.png" width=0 height=0 alt="illusion">
-  <img id=meter7 src="image/meter7.png" width=0 height=0 alt="enchanted">
+  <img id=meter7 src="image/meter7.png" width=0 height=0 alt="illusion">
   
-  <img id=heart src="image/life.png" width=0 height=0 alt="">
+  <img id=cristal1 src="image/cristal_1.png" width=0 height=0 alt="enchanted cristal">
+  <img id=cristal2 src="image/cristal_2.png" width=0 height=0 alt="enchanted cristal">
+  <img id=cristal3 src="image/cristal_3.png" width=0 height=0 alt="enchanted cristal">
+  <img id=cristal4 src="image/cristal_4.png" width=0 height=0 alt="enchanted cristal">
+  <img id=cristal5 src="image/cristal_5.png" width=0 height=0 alt="enchanted cristal">
+  
+  <img id=heart src="image/life.png" width=0 height=0 alt="illusion">
   <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
   
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
