--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
   <img id=cristal4 src="image/cristal_4.png" width=0 height=0 alt="enchanted cristal">
   <img id=cristal5 src="image/cristal_5.png" width=0 height=0 alt="enchanted cristal">
   
+  <img id=villageDoor src="image/door2.png" width=0 height=0 alt="enchanted door">
+  <img id=ruin src="image/ruin.png" width=0 height=0 alt="enchanted ruin">
+  
   <img id=heart src="image/life.png" width=0 height=0 alt="illusion">
   <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
   
