--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   
   <img id=villageDoor src="image/door2.png" width=0 height=0 alt="enchanted door">
   <img id=ruin src="image/ruin.png" width=0 height=0 alt="enchanted ruin">
+  <img id=sign src="image/sign.png" width=0 height=0 alt="enchanted sign">
   
   <img id=heart src="image/life.png" width=0 height=0 alt="illusion">
   <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
