--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="style/main.css">
 
 </head>
-<body onkeydown="caracterMove(event)" onkeyup="caracterStop(event)">
+<body onkeydown="caracterMove(event);teleport(event);" onkeyup="caracterStop(event);">
 
   
   
