--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
   <img id=bobLeft1 src="image/bob3.png" width=0 height=0 alt="gnome">
   <img id=bobLeft2 src="image/bob4.png" width=0 height=0 alt="gnome">
   
+  <img id=tom src="image/tom.png" width=0 height=0 alt="elf">
+  
   <img id=meter1 src="image/meter1.png" width=0 height=0 alt="illusion">
   <img id=meter2 src="image/meter2.png" width=0 height=0 alt="illusion">
   <img id=meter3 src="image/meter3.png" width=0 height=0 alt="illusion">
