--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   
   <img id=heart src="image/life.png" width=0 height=0 alt="illusion">
   <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
+  <img id=box src="image/box.png" width=0 height=0 alt="illusion">
   
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
   
