--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0 alt="spike">
   <img id=spikeWall src="image/spikeWall.png" width=0 height=0 alt="spike">
   <img id=spikeBall src="image/spikeBall.png" width=0 height=0 alt="spike">
+  <img id=water src="image/water.png" width=0 height=0 alt="water">
 
 
 <script src="script/app.js"></script>
