--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
     <br>
     <br>
   <a href="#mycanvas"><img src="image/start.png" id=startButton></a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQqL8pUBOxQNKqaR2M2CXaC5UrYRO02J8vEAT-0HBmhKqGwA/viewform?usp=sf_link"><h2>link to a form for bugs and speedruns</h2></a>
   </div>
   
   
