--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <br>
     <br>
     <br>
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQqL8pUBOxQNKqaR2M2CXaC5UrYRO02J8vEAT-0HBmhKqGwA/viewform?usp=sf_link"><h2>link to a form for bugs and speedruns</h2></a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQqL8pUBOxQNKqaR2M2CXaC5UrYRO02J8vEAT-0HBmhKqGwA/viewform?usp=sf_link"><h2 style="text-align:center;text-decoration:none;">link to a form for bugs and speedruns</h2></a>
   </div>
   
   
