--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <img id=meter5 src="image/meter5.png" width=0 height=0 alt="illusion">
   <img id=meter6 src="image/meter6.png" width=0 height=0 alt="illusion">
   <img id=meter7 src="image/meter7.png" width=0 height=0 alt="illusion">
+  <img id=checkpoint src="image/checkpoint.png" width=0 height=0 alt="illusion">
   
   <img id=cristal1 src="image/cristal_1.png" width=0 height=0 alt="enchanted cristal">
   <img id=cristal2 src="image/cristal_2.png" width=0 height=0 alt="enchanted cristal">
