--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
   <img id=reviveButton src="image/revive.png" width=0 height=0 alt="illusion">
   <img id=box src="image/box.png" width=0 height=0 alt="illusion">
   
+  <img id=chicken src="image/chiken.png" width=0 height=0 alt="illusion">
+  <img id=egg src="image/egg.png" width=0 height=0 alt="illusion">
+  
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
   
   <img id=rock src="image/rock.png" width=0 height=0 alt="rock">
@@ -103,6 +106,7 @@
   <img id=spikeWall src="image/spikeWall.png" width=0 height=0 alt="spike">
   <img id=spikeBall src="image/spikeBall.png" width=0 height=0 alt="spike">
   <img id=water src="image/water.png" width=0 height=0 alt="water">
+  <img id=poison1 src="image/poison1.png" width=0 height=0 alt="illusion">
 
 
 <script src="script/app.js"></script>
