--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   
   <img id=chicken src="image/chiken.png" width=0 height=0 alt="illusion">
   <img id=egg src="image/egg.png" width=0 height=0 alt="illusion">
+  <img id=jelly src="image/jelly.png" width=0 height=0 alt="illusion">
   
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
   
