--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <audio id=sound_3 src="sound/5097789470539776.wav" loop></audio>
   <audio id=sound_4 src="sound/5805286695108608.wav" loop></audio>
   
+  <img id=setBack src="image/settingsBack.png" width=0 height=0 alt="forest">
   <img id=introback src="image/intro.png" width=0 height=0 alt="forest">
   <img id=lvl1back src="image/lvl_1.png" width=0 height=0 alt="forest">
   <img id=lvl2back src="image/lvl_2.png" width=0 height=0 alt="forest">
@@ -80,6 +81,8 @@
   <img id=meter7 src="image/meter7.png" width=0 height=0 alt="illusion">
   <img id=settings src="image/pause.png" width=0 height=0 alt="illusion">
   <img id=checkpoint src="image/checkpoint.png" width=0 height=0 alt="illusion">
+  
+  <img id=setThing src="image/thing.png" width=0 height=0 alt="thing">
   
   <img id=cristal1 src="image/cristal_1.png" width=0 height=0 alt="enchanted cristal">
   <img id=cristal2 src="image/cristal_2.png" width=0 height=0 alt="enchanted cristal">
