--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
   
   <div>
-    <canvas id=mycanvas class=canvases onclick="reset()set(event);"></canvas>
+    <canvas id=mycanvas class=canvases onclick="reset();set(event);"></canvas>
   </div>
   
   <audio id=sound_intro src="sound/5693765046501376.wav" loop></audio>
