--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <img id=lvl2back src="image/lvl_2.png" width=0 height=0 alt="forest">
   <img id=lvl3back src="image/lvl_3.png" width=0 height=0 alt="forest">
   <img id=lvl5back src="image/lvl_5.png" width=0 height=0 alt="forest">
+  <img id=cave1back src="image/caveBack1.png" width=0 height=0 alt="cave">
   
   <img id=house src="image/house.png" width=0 height=0 alt="house">
   
@@ -101,6 +102,7 @@
   <img id=jelly src="image/jelly.png" width=0 height=0 alt="illusion">
   
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
+  <img id=pit src="image/pit.png" width=0 height=0 alt="enchanted pit">
   
   <img id=rock src="image/rock.png" width=0 height=0 alt="rock">
   <img id=vine src="image/vine.png" width=0 height=0 alt="vine">
