--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
   <img id=chicken src="image/chiken.png" width=0 height=0 alt="illusion">
   <img id=egg src="image/egg.png" width=0 height=0 alt="illusion">
   <img id=jelly src="image/jelly.png" width=0 height=0 alt="illusion">
+  <img id=jigle src="image/jigle.png" width=0 height=0 alt="illusion">
   
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door">
   <img id=pit src="image/pit.png" width=0 height=0 alt="enchanted pit">
