--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <img id=spikeWall src="image/spikeWall.png" width=0 height=0 alt="spike">
   <img id=spikeBall src="image/spikeBall.png" width=0 height=0 alt="spike">
   <img id=water src="image/water.png" width=0 height=0 alt="water">
-  <img id=poison1 src="image/poison1.png" width=0 height=0 alt="illusion">
+  <img id=mushroom1 src="image/mushroom.png" width=0 height=0 alt="illusion">
 
 
 <script src="script/app.js"></script>
