--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <img id=door src="image/door.png" width=0 height=0 alt="enchanted door"><img id=pit src="image/pit.png" width=0 height=0 alt="enchanted pit"><img id=rock src="image/rock.png" width=0 height=0 alt="rock"><img id=vine src="image/vine.png" width=0 height=0 alt="vine">
   <img id=spikeFloor src="image/spikeFloor.png" width=0 height=0 alt="spike"><img id=spikeWall src="image/spikeWall.png" width=0 height=0 alt="spike"><img id=spikeBall src="image/spikeBall.png" width=0 height=0 alt="spike"><img id=water src="image/water.png" width=0 height=0 alt="water"><img id=mushroom1 src="image/mushroom.png" width=0 height=0 alt="illusion">
   <img id=mole src="image/mole.png" width=0 height=0 alt="mole"><img id=shape src="image/shape.png" width=0 height=0 alt="shape"><img id=shape2 src="image/shape2.png" width=0 height=0 alt="shape">
-  <img id=bird src="image/bird.png" width=0 height=0 alt="bird"><img id=box2 src="image/box2.png" width=0 height=0 alt="box"><img id=lvl9back src="image/lvl_9.png" width=0 height=0 alt="forest"><img id=town src="image/town.png" width=0 height=0 alt="enchanted town">
+  <img id=bird src="image/bird.png" width=0 height=0 alt="bird"><img id=box2 src="image/box2.png" width=0 height=0 alt="box"><img id=lvl9back src="image/lvl_9.png" width=0 height=0 alt="forest"><img id=town src="image/town.png" width=0 height=0 alt="enchanted town"><img src="image/nest.png" width=0 height=0 alt="nest">
   <script src="script/app.js"></script>
 </body>
 </html>
